# CottonSim

./: .gitignore  README.md
catkin_ws/Husky/husky_control/config/: control.yaml  localization.yaml
catkin_ws/Husky/husky_control/launch/: control.launch
catkin_ws/Husky/husky_control/scripts/: stow_ur5
catkin_ws/Husky/husky_description/launch/: description.launch
catkin_ws/Husky/husky_description/urdf/: husky.urdf-modified.xacro  husky.urdf.xacro  huskyc3.urdf.xacro
catkin_ws/Husky/husky_navigation/config/: costmap_common.yaml
catkin_ws/Husky/husky_navigation/launch/: amcl.launch  cotton_map.launch  gmapping.launch  map_less_navigation.launch  move_base.launch  move_base_nav.launch  move_base_nav_continuous.launch
catkin_ws/Husky/husky_navigation/params/: costmap_common_params.yaml
catkin_ws/Husky/husky_navigation/params_gps/: costmap_common_params.yaml
catkin_ws/camnav/: CMakeLists.txt  package.xml
catkin_ws/camnav/launch/: camnav.launch  launchalllayers.launch
catkin_ws/camnav/src/camnav/: camnav.py
catkin_ws/camnav/src/maskops/: centerskyground.py  groundmaskops.py  skymaskops.py
catkin_ws/camops/: CMakeLists.txt  package.xml
catkin_ws/camops/launch/: camL.launch  camR.launch  mulcam.launch  seg.launch
catkin_ws/camops/src/camL/: camL.py
catkin_ws/camops/src/camR/: camR.py
catkin_ws/camops/src/seg/: seg.py
catkin_ws/computervision/: CMakeLists.txt  package.xml
catkin_ws/computervision/launch/: computervision.launch
catkin_ws/computervision/src/: computervision.py
catkin_ws/cotton_env/: CMakeLists.txt  model.config  package.xml
catkin_ws/cotton_env/launch/: cotton_world_gps.launch  cotton_world_odom.launch  view_world.launch
catkin_ws/cotton_env/maps/: newvlp9row.yaml
catkin_ws/cotton_env/rviz/: world.rviz
catkin_ws/cotton_env/urdf/: cotton_geometry.urdf.xacro
catkin_ws/cotton_env/worlds/: actually_empty_world.world
catkin_ws/husky_manipulation/husky_ur_description/urdf/: husky_ur5_description.urdf (copy 1).xacro  (+2 more)
catkin_ws/husky_viz/cmake/: husky_vizConfig.cmake
catkin_ws/husky_viz/launch/: view_robot_less.launch  view_robot_map.launch
catkin_ws/husky_viz/rviz/: robot.rviz  robot_less.rviz  robot_map.rviz
catkin_ws/outdoor_waypoint_nav/: CMakeLists.txt  package.xml
catkin_ws/outdoor_waypoint_nav/config/: self_filter.yaml
catkin_ws/outdoor_waypoint_nav/launch/: outdoor_nav_sim.launch  send_goals_sim.launch
catkin_ws/outdoor_waypoint_nav/launch/include/: localization_run_sim.launch  safety_node.launch
catkin_ws/outdoor_waypoint_nav/params/: ekf_params.yaml
catkin_ws/outdoor_waypoint_nav/rviz_config/: model.rviz
catkin_ws/outdoor_waypoint_nav/src/: gps_waypoint.cpp
catkin_ws/outdoor_waypoint_nav/waypoint_files/: waypoints.txt
catkin_ws/pc2laser/: CMakeLists.txt  package.xml
catkin_ws/pc2laser/launch/: start.launch
catkin_ws/ur5-joint-position-control/config/: ur5_jnt_pos_ctrl.yaml
catkin_ws/ur5-joint-position-control/launch/: ur5_gazebo_joint_position_control.launch  ur5_joint_position_control.launch
catkin_ws/ur5-joint-position-control/urdf/: ur5_jnt_pos_ctrl.urdf
catkin_ws/ur5control/: CMakeLists.txt  package.xml
catkin_ws/ur5control/launch/: invkine.launch  pick.launch  ur5control.launch
(+255 files in other folders)
